--- a/app/src/main/res/layout/activity_owner_signup.xml
+++ b/app/src/main/res/layout/activity_owner_signup.xml
@@ -49,7 +49,7 @@
             android:layout_marginLeft="5dp"/>
     </LinearLayout>
     <EditText
-        android:id="@+id/address"
+        android:id="@+id/Mnumber"
         android:layout_below="@id/name"
         android:layout_marginTop="12dp"
         android:layout_marginHorizontal="15dp"
@@ -57,10 +57,11 @@
         android:layout_height="wrap_content"
         android:background="@drawable/shape"
         android:padding="10dp"
+        android:inputType="phone"
         android:hint="Mobile number"/>
     <EditText
         android:id="@+id/email"
-        android:layout_below="@id/address"
+        android:layout_below="@id/Mnumber"
         android:layout_marginTop="12dp"
         android:layout_marginHorizontal="15dp"
         android:layout_width="match_parent"
@@ -68,6 +69,12 @@
         android:background="@drawable/shape"
         android:padding="10dp"
         android:hint="Email"/>
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/passwordinput"
+        app:passwordToggleEnabled="true"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/email">
     <EditText
         android:id="@+id/password"
         android:layout_below="@id/email"
@@ -79,9 +86,10 @@
         android:inputType="textPassword"
         android:padding="10dp"
         android:hint="Password"/>
+    </com.google.android.material.textfield.TextInputLayout>
     <EditText
         android:id="@+id/gender"
-        android:layout_below="@id/password"
+        android:layout_below="@id/passwordinput"
         android:layout_marginTop="12dp"
         android:layout_marginHorizontal="15dp"
         android:layout_width="match_parent"
@@ -112,4 +120,12 @@
         android:onClick="shopdetails"
         android:layout_centerHorizontal="true"
         android:background="@drawable/button"/>
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_below="@id/next"
+        android:layout_gravity="center|bottom"
+        android:layout_marginBottom="20dp"
+        android:visibility="gone" />
 </RelativeLayout>
