--- a/app/src/main/res/layout/activity_shop_details.xml
+++ b/app/src/main/res/layout/activity_shop_details.xml
@@ -33,8 +33,7 @@
         android:background="@drawable/shape"
         android:textSize="20dp"
         android:padding="10dp"
-        android:hint="Shop Name"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
+        android:hint="Shop Name"/>
     <TextView
         android:id="@+id/openingtime"
         android:layout_below="@id/shopname"
@@ -45,8 +44,7 @@
         android:background="@drawable/shape"
         android:padding="10dp"
         android:hint="Shop Opening Time"
-        android:textSize="20dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
+        android:textSize="20dp"/>
     <TextView
         android:id="@+id/closingtime"
         android:layout_below="@id/openingtime"
@@ -57,12 +55,24 @@
         android:background="@drawable/shape"
         android:padding="10dp"
         android:hint="Shop Closing Time"
+        android:textSize="20dp"/>
+    <TextView
+        android:id="@+id/location"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/closingtime"
+        android:layout_marginTop="15dp"
+        android:layout_marginHorizontal="15dp"
+        android:background="@drawable/shape"
+        android:padding="10dp"
+        android:hint="location"
         android:textSize="20dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
+        android:clickable="true"
+        android:onClick="GetLocation"/>
 
     <Button
         android:id="@+id/Register"
-        android:layout_below="@id/closingtime"
+        android:layout_below="@id/location"
         android:layout_width="match_parent"
         android:layout_marginTop="100dp"
         android:layout_marginHorizontal="15dp"
@@ -79,7 +89,7 @@
         android:layout_below="@id/Register"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_marginTop="115dp"
+        android:layout_marginTop="80dp"
         android:background="#fc917e"/>
 
     <TextView
