--- a/app/src/main/res/layout/activity_signup_activity.xml
+++ b/app/src/main/res/layout/activity_signup_activity.xml
@@ -37,8 +37,8 @@
             android:layout_margin="15dp"
             android:padding="15dp"
             android:background="@drawable/shapeemail"
-            android:drawableLeft="@drawable/ic_lock_black_24dp"
             android:drawablePadding="10dp"
+            android:drawableLeft="@drawable/ic_lock_black_24dp"
             android:hint="Password"
             android:inputType="textPassword"
             android:textColor="@android:color/white"
@@ -57,6 +57,7 @@
             android:layout_marginTop="16dp"
             android:background="@drawable/firstlogin"
             android:text="@string/action_sign_in_short"
+            android:onClick="SignIn"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:textColor="@android:color/black"
             android:textStyle="bold"
