--- a/app/src/main/res/layout/custom_listowner.xml
+++ b/app/src/main/res/layout/custom_listowner.xml
@@ -23,7 +23,7 @@
             android:layout_marginVertical="17dp"
             android:textSize="18dp"
             android:textColor="#000000"
-            android:text="Special Saloon"
+            android:text="Nishant Padhi"
             android:textStyle="bold"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="10dp" />
@@ -36,18 +36,18 @@
         android:layout_marginHorizontal="8dp"
         android:background="#c2c0c0"/>
     <TextView
-        android:id="@+id/booking"
+        android:id="@+id/slot"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="BOOKED ON"
+        android:hint="SLOT AVAILABLE ON"
         android:textSize="12dp"
         android:layout_marginLeft="10dp"
         android:layout_below="@id/line"/>
     <TextView
-        android:id="@+id/bookdisplay"
+        android:id="@+id/slotdisplay"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/booking"
+        android:layout_below="@id/slot"
         android:text="5 SEP 2019 at 7.30 PM"
         android:textSize="15dp"
         android:textColor="#000000"
@@ -58,7 +58,7 @@
         android:layout_height="wrap_content"
         android:hint="SCHEDULED ON"
         android:textSize="12dp"
-        android:layout_below="@id/bookdisplay"
+        android:layout_below="@id/slotdisplay"
         android:layout_marginTop="5dp"
         android:layout_marginLeft="10dp"/>
     <TextView
@@ -83,7 +83,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/payment"
         android:layout_below="@id/belowline">
-    <TextView
+        <TextView
         android:id="@+id/paymenttext"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
