--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -25,7 +25,7 @@
         android:layout_marginHorizontal="97dp"
         android:background="#000000"/>
     <EditText
-        android:id="@+id/fname"
+        android:id="@+id/fnameUser"
         android:layout_below="@id/line"
         android:layout_marginTop="30dp"
         android:layout_marginHorizontal="15dp"
@@ -35,8 +35,8 @@
         android:padding="10dp"
         android:hint="  First Name"/>
     <EditText
-        android:id="@+id/Lname"
-        android:layout_below="@id/fname"
+        android:id="@+id/LnameUser"
+        android:layout_below="@id/fnameUser"
         android:layout_marginTop="15dp"
         android:layout_marginHorizontal="15dp"
         android:layout_width="match_parent"
@@ -45,8 +45,8 @@
         android:padding="10dp"
         android:hint="  Last Name"/>
     <EditText
-        android:id="@+id/email"
-        android:layout_below="@id/Lname"
+        android:id="@+id/emailUser"
+        android:layout_below="@id/LnameUser"
         android:layout_marginTop="12dp"
         android:layout_marginHorizontal="15dp"
         android:layout_width="match_parent"
@@ -55,8 +55,8 @@
         android:padding="10dp"
         android:hint="  Email"/>
     <EditText
-        android:id="@+id/number"
-        android:layout_below="@id/email"
+        android:id="@+id/numberUser"
+        android:layout_below="@id/emailUser"
         android:layout_marginTop="12dp"
         android:layout_marginHorizontal="15dp"
         android:layout_width="match_parent"
@@ -65,8 +65,8 @@
         android:padding="10dp"
         android:hint="  Mobile Number"/>
     <EditText
-        android:id="@+id/gender"
-        android:layout_below="@id/number"
+        android:id="@+id/GenderUser"
+        android:layout_below="@id/numberUser"
         android:layout_marginTop="12dp"
         android:layout_marginHorizontal="15dp"
         android:layout_width="match_parent"
