--- a/app/src/main/res/layout/content_saloon_deatils.xml
+++ b/app/src/main/res/layout/content_saloon_deatils.xml
@@ -4,11 +4,11 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="15dp"
-    android:background="@drawable/relativelayoutshape">
+    android:padding="15dp">
 
     <LinearLayout
         android:id="@+id/list_top"
+        android:layout_marginTop="40dp"
         android:layout_width="match_parent"
         android:layout_height="80dp">
         <ImageView
@@ -17,7 +17,7 @@
             android:layout_margin="10dp"
             android:background="@drawable/b" />
         <TextView
-            android:id="@+id/saloonName"
+            android:id="@+id/saloonNameDetail"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_marginVertical="17dp"
@@ -82,7 +82,7 @@
         android:text="SERVICE OFFERED" />
     <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="fill_parent"
-        android:layout_height="400dp"
+        android:layout_height="320dp"
         android:fillViewport="true"
         android:layout_below="@id/textView1"
         android:layout_marginTop="10dp"
@@ -122,7 +122,7 @@
                     android:textColor="#000000"
                     android:textSize="14dp"/>
                 <TextView
-                    android:id="@+id/GeneralHaircut"
+                    android:id="@+id/GeneralHaircut_detail"
                     android:layout_width="70dp"
                     android:layout_height="wrap_content"
                     android:textColor="#000000"
@@ -149,7 +149,7 @@
                     android:textColor="#000000"
                     android:textSize="14dp"/>
                 <TextView
-                    android:id="@+id/Buzz_hair_cut"
+                    android:id="@+id/Buzz_hair_cut_detail"
                     android:layout_width="70dp"
                     android:layout_height="wrap_content"
                     android:textColor="#000000"
@@ -176,7 +176,7 @@
                     android:textColor="#000000"
                     android:textSize="14dp"/>
                 <TextView
-                    android:id="@+id/combover_haircut"
+                    android:id="@+id/combover_haircut_detail"
                     android:layout_width="70dp"
                     android:layout_height="wrap_content"
                     android:textColor="#000000"
@@ -203,7 +203,7 @@
                     android:textColor="#000000"
                     android:textSize="14dp"/>
                 <TextView
-                    android:id="@+id/lowfade_haircut"
+                    android:id="@+id/lowfade_haircut_detail"
                     android:layout_width="70dp"
                     android:layout_height="wrap_content"
                     android:textColor="#000000"
@@ -242,7 +242,7 @@
                     android:textColor="#000000"
                     android:textSize="14dp"/>
                 <TextView
-                    android:id="@+id/Trimming"
+                    android:id="@+id/Trimming_detail"
                     android:layout_width="70dp"
                     android:layout_height="wrap_content"
                     android:textColor="#000000"
@@ -269,7 +269,7 @@
                     android:textColor="#000000"
                     android:textSize="14dp"/>
                 <TextView
-                    android:id="@+id/cleanshave"
+                    android:id="@+id/cleanshave_detail"
                     android:layout_width="70dp"
                     android:layout_height="wrap_content"
                     android:textColor="#000000"
@@ -308,7 +308,7 @@
                     android:textColor="#000000"
                     android:textSize="14dp"/>
                 <TextView
-                    android:id="@+id/facemassage"
+                    android:id="@+id/facemassage_detail"
                     android:layout_width="70dp"
                     android:layout_height="wrap_content"
                     android:textColor="#000000"
@@ -335,7 +335,7 @@
                     android:textColor="#000000"
                     android:textSize="14dp"/>
                 <TextView
-                    android:id="@+id/classicmassage"
+                    android:id="@+id/classicmassage_detail"
                     android:layout_width="70dp"
                     android:layout_height="wrap_content"
                     android:textColor="#000000"
@@ -362,7 +362,7 @@
                     android:textColor="#000000"
                     android:textSize="14dp"/>
                 <TextView
-                    android:id="@+id/Therapeuticmassage"
+                    android:id="@+id/Therapeuticmassage_detail"
                     android:layout_width="70dp"
                     android:layout_height="wrap_content"
                     android:textColor="#000000"
@@ -401,7 +401,7 @@
                     android:textColor="#000000"
                     android:textSize="14dp"/>
                 <TextView
-                    android:id="@+id/hairstraightining"
+                    android:id="@+id/hairstraightining_detail"
                     android:layout_width="70dp"
                     android:layout_height="wrap_content"
                     android:textColor="#000000"
@@ -428,7 +428,7 @@
                     android:textColor="#000000"
                     android:textSize="14dp"/>
                 <TextView
-                    android:id="@+id/Facial"
+                    android:id="@+id/Facial_detail"
                     android:layout_width="70dp"
                     android:layout_height="wrap_content"
                     android:textColor="#000000"
@@ -455,7 +455,7 @@
                     android:textColor="#000000"
                     android:textSize="14dp"/>
                 <TextView
-                    android:id="@+id/Manicure"
+                    android:id="@+id/Manicure_detail"
                     android:layout_width="70dp"
                     android:layout_height="wrap_content"
                     android:textColor="#000000"
@@ -482,7 +482,7 @@
                     android:textColor="#000000"
                     android:textSize="14dp"/>
                 <TextView
-                    android:id="@+id/Padicure"
+                    android:id="@+id/Padicure_detail"
                     android:layout_width="70dp"
                     android:layout_height="wrap_content"
                     android:textColor="#000000"
@@ -510,7 +510,7 @@
                     android:textColor="#000000"
                     android:textSize="14dp"/>
                 <TextView
-                    android:id="@+id/Spa"
+                    android:id="@+id/Spa_detail"
                     android:layout_width="70dp"
                     android:layout_height="wrap_content"
                     android:textColor="#000000"
@@ -527,7 +527,7 @@
         android:id="@+id/BookSlot"
         android:layout_below="@+id/priceChart"
         android:layout_width="350dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="25dp"
         android:layout_height="wrap_content"
         android:text="Book A Slot"
         android:textSize="16dp"
