--- a/app/src/main/res/layout/custom_list.xml
+++ b/app/src/main/res/layout/custom_list.xml
@@ -70,9 +70,27 @@
         android:text="5 SEP 2019 at 7.30 PM"
         android:textSize="15dp"
         android:textColor="#000000" />
+    <TextView
+        android:id="@+id/Contact"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="CONTACT DETAILS"
+        android:textSize="12dp"
+        android:layout_below="@id/scheduledisplay"
+        android:layout_marginTop="5dp"
+        android:layout_marginLeft="10dp"/>
+    <TextView
+        android:id="@+id/ContactNumberCustomer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/Contact"
+        android:layout_marginLeft="10dp"
+        android:text="92626888967"
+        android:textSize="15dp"
+        android:textColor="#000000" />
     <View
         android:id="@+id/belowline"
-        android:layout_below="@id/scheduledisplay"
+        android:layout_below="@id/ContactNumberCustomer"
         android:layout_width="match_parent"
         android:layout_height="0.6dp"
         android:layout_marginHorizontal="8dp"
