--- a/app/src/main/res/layout/custom_listtoday.xml
+++ b/app/src/main/res/layout/custom_listtoday.xml
@@ -23,7 +23,7 @@
             android:layout_marginVertical="17dp"
             android:textSize="18dp"
             android:textColor="#000000"
-            android:text="Special Saloon"
+            android:text="Nishant Padhi"
             android:textStyle="bold"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="10dp" />
@@ -68,6 +68,24 @@
         android:layout_below="@id/scheduling"
         android:layout_marginLeft="10dp"
         android:text="7.30 PM"
+        android:textSize="15dp"
+        android:textColor="#000000" />
+    <TextView
+        android:id="@+id/Contact"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="CONTACT DETAILS"
+        android:textSize="12dp"
+        android:layout_below="@id/scheduledisplay"
+        android:layout_marginTop="5dp"
+        android:layout_marginLeft="10dp"/>
+    <TextView
+        android:id="@+id/ContactNumber"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/Contact"
+        android:layout_marginLeft="10dp"
+        android:text="92626888967"
         android:textSize="15dp"
         android:textColor="#000000" />
 
