--- a/app/src/main/res/layout/fragment_ownerappointment.xml
+++ b/app/src/main/res/layout/fragment_ownerappointment.xml
@@ -12,6 +12,17 @@
         android:textColor="#000000"
         android:textStyle="bold"
         android:textSize="18dp"/>
+    <TextView
+        android:id="@+id/NodataOwner"
+        android:layout_below="@id/textappointment"
+        android:layout_centerVertical="true"
+        android:layout_marginTop="280dp"
+        android:text="                     No Appointment To Display"
+        android:textColor="#000000"
+        android:textStyle="bold"
+        android:textSize="18dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
     <ListView
         android:id="@+id/CustomerlistOwner"
         android:layout_below="@id/textappointment"
