Appointment Booking And Display Done

--- a/app/src/main/res/layout/custom_listowner.xml
+++ b/app/src/main/res/layout/custom_listowner.xml
@@ -39,7 +39,7 @@
         android:id="@+id/slot"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="SLOT AVAILABLE ON"
+        android:hint="BOOKED ON"
         android:textSize="12dp"
         android:layout_marginLeft="10dp"
         android:layout_below="@id/line"/>
