--- a/app/src/main/res/layout/activity_signup_activity.xml
+++ b/app/src/main/res/layout/activity_signup_activity.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     android:background="@drawable/signup_background"
-    tools:context=".Signup_activity">
+    tools:context=".Signin_activity">
 
     <RelativeLayout
         android:layout_width="match_parent"
