Appointment Booking And Display Done

--- a/app/src/main/res/layout/activity_customer_signup.xml
+++ b/app/src/main/res/layout/activity_customer_signup.xml
@@ -88,7 +88,7 @@
         android:padding="10dp"
         android:hint="Password"/>
     </com.google.android.material.textfield.TextInputLayout>
-    <EditText
+    <Spinner
         android:id="@+id/gender"
         android:layout_below="@id/passwordinput"
         android:layout_marginTop="12dp"
@@ -96,8 +96,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/shape"
-        android:padding="10dp"
-        android:hint="Gender"/>
+        android:paddingVertical="10dp"/>
     <EditText
         android:id="@+id/referral"
         android:layout_below="@id/gender"
