--- a/app/src/main/res/layout/activity_owner_signup.xml
+++ b/app/src/main/res/layout/activity_owner_signup.xml
@@ -87,7 +87,7 @@
         android:padding="10dp"
         android:hint="Password"/>
     </com.google.android.material.textfield.TextInputLayout>
-    <EditText
+    <Spinner
         android:id="@+id/gender"
         android:layout_below="@id/passwordinput"
         android:layout_marginTop="12dp"
@@ -95,8 +95,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/shape"
-        android:padding="10dp"
-        android:hint="Gender"/>
+        android:clickable="true"
+        android:paddingVertical="10dp"/>
     <EditText
         android:id="@+id/Website_link"
         android:layout_below="@id/gender"
