--- a/app/src/main/res/layout/custom_listtoday.xml
+++ b/app/src/main/res/layout/custom_listtoday.xml
@@ -70,23 +70,35 @@
         android:text="7.30 PM"
         android:textSize="15dp"
         android:textColor="#000000" />
-    <TextView
-        android:id="@+id/Contact"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="CONTACT DETAILS"
-        android:textSize="12dp"
+    <View
+        android:id="@+id/belowline"
         android:layout_below="@id/scheduledisplay"
-        android:layout_marginTop="5dp"
-        android:layout_marginLeft="10dp"/>
-    <TextView
-        android:id="@+id/ContactNumber"
+        android:layout_width="match_parent"
+        android:layout_height="0.6dp"
+        android:layout_marginHorizontal="8dp"
+        android:layout_marginTop="7dp"
+        android:background="#c2c0c0"/>
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/Contact"
-        android:layout_marginLeft="10dp"
-        android:text="92626888967"
-        android:textSize="15dp"
-        android:textColor="#000000" />
+        android:id="@+id/payment"
+        android:layout_below="@id/belowline">
+        <TextView
+            android:id="@+id/Contact"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="Contact Details : "
+            android:textSize="14dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginLeft="10dp"/>
+        <TextView
+            android:id="@+id/ContactNumber"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="9262688967"
+            android:textSize="15dp"
+            android:layout_marginTop="5dp"
+            android:textColor="#000000"/>
+    </LinearLayout>
 
 </RelativeLayout>
